--- a/tasks/slurmdbd_cluster.yml
+++ b/tasks/slurmdbd_cluster.yml
@@ -6,7 +6,7 @@
   become: yes
   become_user: root
 
-- name: set cluster_check_boolean
+- name: Set cluster_check_boolean
   ansible.builtin.set_fact:
       __cluster_not_setup: false
   when: cluster_check.stdout == "cluster"
