--- a/tasks/common.yml
+++ b/tasks/common.yml
@@ -13,7 +13,7 @@
   ansible.builtin.template:
     src: logrotate.j2
     dest: /etc/logrotate.d/slurm
-    mode: 0644
+    mode: '0644'
   when: slurm_rotate_logs
 
 - name: Install slurm.conf
@@ -22,7 +22,7 @@
     dest: "{{ slurm_config_dir }}/slurm.conf"
     owner: root
     group: root
-    mode: 0444
+    mode: '0444'
   notify:
     - Restart slurmd
     - Restart slurmctld
