--- a/tasks/slurmdbd.yml
+++ b/tasks/slurmdbd.yml
@@ -10,7 +10,7 @@
     path: "{{ __slurmdbd_config_merged.LogFile | dirname }}"
     owner: "{{ __slurm_user_name }}"
     group: "{{ __slurm_group_name }}"
-    mode: 0755
+    mode: '0755'
     state: directory
   when: slurm_create_dirs and __slurmdbd_config_merged.LogFile != omit
 
@@ -24,7 +24,7 @@
     dest: "{{ slurm_config_dir }}/{{ item.name }}"
     owner: "{{ __slurm_user_name }}"
     group: root
-    mode: 0600
+    mode: '0600'
   with_items:
     - name: slurmdbd.conf
       config: __slurmdbd_config_merged
