--- a/tasks/slurmdbd_cluster.yml
+++ b/tasks/slurmdbd_cluster.yml
@@ -3,7 +3,7 @@
 - name: Check for existence of cluster in db.
   register: cluster_check
   ansible.builtin.shell: "set -o pipefail && sacctmgr -n list cluster | cut -f 4 -d ' '"
-  become: yes
+  become: true
   become_user: root
 
 - name: Set cluster_check_boolean
@@ -13,7 +13,7 @@
 
 - name: Create the slurmdbd cluster
   ansible.builtin.command: sacctmgr -i -n add cluster {{ __slurm_cluster_name }}
-  become: yes
+  become: true
   become_user: root
   notify:
     - reload slurmdbd
